XIVY-12261 streamlined getTypes & getAlgorithms