@@ -2,6 +2,7 @@ package ch.ivyteam.enginecockpit.configuration;
 
 import java.io.IOException;
 import java.security.KeyStoreException;
+import java.security.Provider;
 import java.security.Security;
 import java.security.cert.Certificate;
 import java.security.cert.CertificateException;
@@ -14,6 +15,7 @@ import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.faces.application.FacesMessage;
 import javax.faces.bean.ManagedBean;
@@ -356,27 +358,22 @@ public class SslClientBean {
   }
 
   private List<String> getTypes(String selectedProvider) {
-    if (StringUtils.isEmpty(selectedProvider)) {
-      return getAlgorithms(Key.STORE);
-    } else {
-      var provider = Security.getProvider(selectedProvider);
-      if (provider != null) {
-        return provider.getServices().stream()
-                .filter(service -> service.getType().equals(Key.STORE))
-                .map(service -> service.getAlgorithm())
-                .toList();
-      }
-    }
-    return getAlgorithms(Key.STORE);
+    Provider[] providers = Security.getProviders();
+    return Arrays.stream(providers)
+            .filter(provider -> StringUtils.isEmpty(selectedProvider)
+                    || provider.getName().equals(selectedProvider))
+            .flatMap(provider -> provider.getServices().stream())
+            .filter(service -> service.getType().equals(Key.STORE))
+            .map(service -> service.getAlgorithm())
+            .collect(Collectors.toList());
   }
 
   private List<String> getAlgorithms(String type) {
-    List<String> algorithms = Arrays.stream(Security.getProviders())
-            .flatMap(securityProvider -> securityProvider.getServices().stream())
+    Provider[] providers = Security.getProviders();
+    Stream<String> algorithmsStream = Arrays.stream(providers)
+            .flatMap(provider -> provider.getServices().stream())
             .filter(service -> service.getType().equals(type))
-            .map(service -> service.getAlgorithm())
-            .collect(Collectors.toList());
-    algorithms.add("");
-    return algorithms;
+            .map(service -> service.getAlgorithm());
+    return Stream.concat(algorithmsStream, Stream.of("")).collect(Collectors.toList());
   }
 }
